# Bloom

./: .gitignore  AGENTS.md  CLAUDE.zh.md  GUIDE.md  GUIDE.zh.md  LICENSE  README.md  README.zh.md
backend/: Dockerfile  pyproject.toml
backend/app/: courses.py  database.py  main.py  models.py  recommendations.py  schemas.py
backend/tests/integration/: test_full_flow.py
backend/tests/unit/: test_courses.py  test_lessons.py
frontend/: nginx.conf
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  PdfViewer.jsx  RecommendationPanel.jsx
frontend/src/lib/: api.js
frontend/src/pages/: CoursePage.jsx  DashboardPage.jsx  LessonPage.jsx  ProfilePage.jsx  SyllabusPage.jsx
githooks/: pre-push
scripts/: secret-scan.sh
site/: README.md
site/src/pages/: index.astro
skills/bloom-tutor/: SKILL.md
skills/bloom-tutor/references/: articles.md  logging.md  summary.md  syllabus.md
skills/learn-crossover/: SKILL.md
skills/learn-deep/: SKILL.md
skills/learn-feynman/: SKILL.md
skills/learn-graph/: SKILL.md
skills/learn-occam/: SKILL.md
skills/learn-prototype/: SKILL.md
